--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							</li>
 							<li role="separator" class="divider"></li>
 							<li>
-								<a href="#">Sample Websites</a>
+								<a>Sample Websites</a>
 							</li>
 							<li>
 								<a href="http://bizland.egbertpc.com" target="_blank">Bizland</a>
@@ -96,7 +96,7 @@
 	<div class="pimg1">
 		<div class="ptext">
 			<span class="border">
-				egbertpc
+				<img src="../img/egbertpc_transparent.png">
 			</span>
 		</div>
 	</div>
@@ -152,7 +152,7 @@
 	<div class="pimg1">
 		<div class="ptext">
 			<span class="border">
-				egbertpc
+				<img src="../img/egbertpc_transparent.png">
 			</span>
 		</div>
 	</div>
