Added StoryBooks in the drop down

--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 								<a href="http://madmin.egbertpc.com" target="_blank">Madmin</a>
 							</li>
 							<li>
+								<a href="http://storybooks.egbertpc.com" target="_blank">StoryBooks</a>
+							</li>
+							<li>
 								<a href="http://quazzu.egbertpc.com" target="_blank">Quazzu</a>
 							</li>
 							<li>
