Added links to sections on first page

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
 					<li class="active">
-						<a href="#">Link
+						<a href="#section1">Section 1
 							<span class="sr-only">(current)</span>
 						</a>
 					</li>
 					<li>
-						<a href="#">Link</a>
+						<a href="#section2">Section 2</a>
 					</li>
 					<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown
@@ -105,7 +105,7 @@
 	</div>
 
 	<section class="section section-light">
-		<h2>Section One</h2>
+		<h2><a name=section1>Section One</a></h2>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut velit assumenda vero nobis at, totam consequuntur inventore
 			voluptatibus, illo est aperiam perferendis earum sit hic facere maiores quisquam! Adipisci ratione nam obcaecati pariatur
@@ -126,7 +126,7 @@
 	</div>
 
 	<section class="section section-dark">
-		<h2>Section Two</h2>
+		<h2><a name= section2>Section Two</a></h2>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut velit assumenda vero nobis at, totam consequuntur inventore
 			voluptatibus, illo est aperiam perferendis earum sit hic facere maiores quisquam! Adipisci ratione nam obcaecati pariatur
