Added VidJot to sample websites

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							</li>
 							<li role="separator" class="divider"></li>
 							<li>
-								<a href="#">Sample Websites</a>
+								<p>Sample Websites</p>
 							</li>
 							<li>
 								<a href="http://bizland.egbertpc.com" target="_blank">Bizland</a>
@@ -83,6 +83,9 @@
 							</li>
 							<li>
 								<a href="http://travelville.egbertpc.com" target="_blank">Travelville</a>
+							</li>
+							<li>
+								<a href="http://vidjot.egbertpc.com" target="_blank">VidJot</a>
 							</li>
 							<li role="separator" class="divider"></li>
 							<li>
