change back sample websites a tag from p tag

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							</li>
 							<li role="separator" class="divider"></li>
 							<li>
-								<p>Sample Websites</p>
+								<a href="#">Sample Websites</p>
 							</li>
 							<li>
 								<a href="http://bizland.egbertpc.com" target="_blank">Bizland</a>
