added links to more websites in html

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 		<div class="container">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
-				 aria-expanded="false">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+					data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -38,15 +38,16 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
 					<li class="active">
-						<a href="#">Link
+						<a href="#section1">Section 1
 							<span class="sr-only">(current)</span>
 						</a>
 					</li>
 					<li>
-						<a href="#">Link</a>
+						<a href="#section2">Section 2</a>
 					</li>
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+							aria-expanded="false">Dropdown
 							<span class="caret"></span>
 						</a>
 						<ul class="dropdown-menu">
@@ -61,10 +62,16 @@
 							</li>
 							<li role="separator" class="divider"></li>
 							<li>
-								<a>Sample Websites</a>
+								<a href="#">Sample Websites</a>
 							</li>
 							<li>
 								<a href="http://bizland.egbertpc.com" target="_blank">Bizland</a>
+							</li>
+							<li>
+								<a href="http://edgeledger.egbertpc.com" target="_blank">EdgeLedger</a>
+							</li>
+							<li>
+								<a href="http://fashionnanascloset.com" target="_blank">Fashion Nanas Closet</a>
 							</li>
 							<li>
 								<a href="http://galappear.egbertpc.com" target="_blank">Galappear</a>
@@ -76,10 +83,19 @@
 								<a href="http://madmin.egbertpc.com" target="_blank">Madmin</a>
 							</li>
 							<li>
+								<a href="http://newsgrid.egbertpc.com" target="_blank">NewsGrid</a>
+							</li>
+							<li>
+								<a href="http://storybooks.egbertpc.com" target="_blank">StoryBooks</a>
+							</li>
+							<li>
 								<a href="http://quazzu.egbertpc.com" target="_blank">Quazzu</a>
 							</li>
 							<li>
 								<a href="http://travelville.egbertpc.com" target="_blank">Travelville</a>
+							</li>
+							<li>
+								<a href="http://vidjot.egbertpc.com" target="_blank">VidJot</a>
 							</li>
 							<li role="separator" class="divider"></li>
 							<li>
@@ -96,20 +112,26 @@
 	<div class="pimg1">
 		<div class="ptext">
 			<span class="border">
-				<img src="../img/egbertpc_transparent.png">
+				egbertpc
 			</span>
 		</div>
 	</div>
 
 	<section class="section section-light">
-		<h2>Section One</h2>
+		<h2><a name=section1>Section One</a></h2>
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut velit assumenda vero nobis at, totam consequuntur inventore
-			voluptatibus, illo est aperiam perferendis earum sit hic facere maiores quisquam! Adipisci ratione nam obcaecati pariatur
-			eius eaque sit, ullam dolores eum mollitia, sint voluptas cumque omnis delectus incidunt velit, provident nisi! Voluptatum,
-			voluptatibus veniam. Quis quae provident adipisci repellat dolore commodi labore eum delectus enim, officia voluptates
-			cumque necessitatibus doloribus reprehenderit iste aut repellendus et molestiae aliquid quaerat aliquam atque dignissimos
-			nam recusandae veniam! Odit atque ab quae, distinctio laboriosam suscipit unde veniam. Repudiandae adipisci repellendus
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut velit assumenda vero nobis at, totam consequuntur
+			inventore
+			voluptatibus, illo est aperiam perferendis earum sit hic facere maiores quisquam! Adipisci ratione nam obcaecati
+			pariatur
+			eius eaque sit, ullam dolores eum mollitia, sint voluptas cumque omnis delectus incidunt velit, provident nisi!
+			Voluptatum,
+			voluptatibus veniam. Quis quae provident adipisci repellat dolore commodi labore eum delectus enim, officia
+			voluptates
+			cumque necessitatibus doloribus reprehenderit iste aut repellendus et molestiae aliquid quaerat aliquam atque
+			dignissimos
+			nam recusandae veniam! Odit atque ab quae, distinctio laboriosam suscipit unde veniam. Repudiandae adipisci
+			repellendus
 			ex esse ad, molestiae quisquam aperiam.
 		</p>
 	</section>
@@ -123,11 +145,14 @@
 	</div>
 
 	<section class="section section-dark">
-		<h2>Section Two</h2>
+		<h2><a name=section2>Section Two</a></h2>
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut velit assumenda vero nobis at, totam consequuntur inventore
-			voluptatibus, illo est aperiam perferendis earum sit hic facere maiores quisquam! Adipisci ratione nam obcaecati pariatur
-			eius eaque sit, ullam dolores eum mollitia, sint voluptas cumque omnis delectus incidunt velit, provident nisi! Voluptatum,
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut velit assumenda vero nobis at, totam consequuntur
+			inventore
+			voluptatibus, illo est aperiam perferendis earum sit hic facere maiores quisquam! Adipisci ratione nam obcaecati
+			pariatur
+			eius eaque sit, ullam dolores eum mollitia, sint voluptas cumque omnis delectus incidunt velit, provident nisi!
+			Voluptatum,
 			voluptatibus veniam. Quis quae provident adipisci repellat dolore commodi labore eum delectus enim,
 		</p>
 	</section>
@@ -142,9 +167,12 @@
 	<section class="section section-dark">
 		<h2>Section Three</h2>
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut velit assumenda vero nobis at, totam consequuntur inventore
-			voluptatibus, illo est aperiam perferendis earum sit hic facere maiores quisquam! Adipisci ratione nam obcaecati pariatur
-			eius eaque sit, ullam dolores eum mollitia, sint voluptas cumque omnis delectus incidunt velit, provident nisi! Voluptatum,
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut velit assumenda vero nobis at, totam consequuntur
+			inventore
+			voluptatibus, illo est aperiam perferendis earum sit hic facere maiores quisquam! Adipisci ratione nam obcaecati
+			pariatur
+			eius eaque sit, ullam dolores eum mollitia, sint voluptas cumque omnis delectus incidunt velit, provident nisi!
+			Voluptatum,
 			voluptatibus veniam. Quis quae provident adipisci repellat dolore commodi labore eum delectus enim,
 		</p>
 	</section>
@@ -152,7 +180,7 @@
 	<div class="pimg1">
 		<div class="ptext">
 			<span class="border">
-				<img src="../img/egbertpc_transparent.png">
+				egbertpc
 			</span>
 		</div>
 	</div>
